# Cubegression-Light

./: CMakeLists.txt  README.md  config.txt  main.cpp
cubemod/: CMakeLists.txt
cubemod/src/core/: game_structures.h  main.cpp  main.h
cwmods/: CMakeLists.txt  MakeCWModsCMake.py  cwsdk.h
cwmods/cube/: Creature.cpp  GUI.h
cwmods/plasma/: Node.cpp  Widget.h
src/core/: game_structures.h  main.cpp  main.h
src/core/hook/: hook.h
src/core/hook/hooks/artifact/base_stats/: hook_get_player_armor.h
src/hooks/: base_damage.h  base_haste.h  base_hp.h  base_spell.h
src/hooks/display/: change_stat_display.h  change_stat_suffix.h
src/hooks/stats/: base_armor.h  base_crit.h  base_haste.h  base_regen.h  base_resist.h
